--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "test1",
+  "name": "my-simple-react-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4"
